--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,60 @@
 
         <!-- Add your site or application content here -->
         <div id="app"></div>
+
+        <div class="ui list">
+          <div class="item">
+            <i class="users icon"></i>
+            <div class="content">
+              Semantic UI
+            </div>
+          </div>
+          <div class="item">
+            <i class="marker icon"></i>
+            <div class="content">
+              New York, NY
+            </div>
+          </div>
+          <div class="item">
+            <i class="mail icon"></i>
+            <div class="content">
+              <a href="mailto:jack@semantic-ui.com">jack@semantic-ui.com</a>
+            </div>
+          </div>
+          <div class="item">
+            <i class="linkify icon"></i>
+            <div class="content">
+              <a href="http://www.semantic-ui.com">semantic-ui.com</a>
+            </div>
+          </div>
+        </div>
+
+        <a id="modal-launch" class="ui black pointing below ignored label">Launch Modal</a>
+        <div class="ui modal">
+          <i class="close icon"></i>
+          <div class="header">
+            Profile Picture
+          </div>
+          <div class="image content">
+            <div class="ui medium image">
+              <img src="http://semantic-ui.com/images/avatar2/large/rachel.png">
+            </div>
+            <div class="description">
+              <div class="ui header">We've auto-chosen a profile image for you.</div>
+              <p>We've grabbed the following image from the <a href="https://www.gravatar.com" target="_blank">gravatar</a> image associated with your registered e-mail address.</p>
+              <p>Is it okay to use this photo?</p>
+            </div>
+          </div>
+          <div class="actions">
+            <div class="ui black deny button">
+              Nope
+            </div>
+            <div class="ui positive right labeled icon button">
+              Yep, that's me
+              <i class="checkmark icon"></i>
+            </div>
+          </div>
+        </div>
+
     </body>
 </html>
